z-index correction

--- a/apps/wsdjs_web/assets/css/search.css
+++ b/apps/wsdjs_web/assets/css/search.css
@@ -15,7 +15,7 @@
   pointer-events: none;
   position: relative;
   margin-right: auto;
-  z-index: 9999;
+  @apply z-20;
 }
 
 .search-container.focused {
